Perubahan text pada edit text di activity_main.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/etName"
             android:layout_weight="0.75"
-            android:hint="Enter Name" />
+            android:hint="Enter Your Name" />
     </LinearLayout>
 
     <LinearLayout
