Perubahan text pada edit text di activity_main.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
-            android:hint="Enter Email"
+            android:hint="Enter Your Email"
             android:inputType="textEmailAddress" />
     </LinearLayout>
 
